--- a/IHM/src/app/app.component.html
+++ b/IHM/src/app/app.component.html
@@ -3,6 +3,19 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
+  <div>
+    <button class="button" [style.background]="herbeStatus == 'on' ? '#4CAF50' : '#DB1702'" (click)="handleHerbe()">Herbe</button>
+    <!-- <button [style.background]="'blue'">Potager</button> -->
+    <button class="button" [style.background]="potagerStatus == 'on' ? '#4CAF50' : '#DB1702'"  (click)="handlePotager()">Potager</button><br/>
+    <label>Temps (en minutes)</label>
+    <input [(ngModel)]="time" type="number" name="time" max="100" />
+  </div>
+  <br/>
+  <div>
+    <button class="button" (click)="getStatus()">Statut</button>
+  </div>
+  <div>
+      <button class="button" (click)="handleStop()">Eteindre arrosage</button><br/>
+  </div>
+  <label>{{ log }}</label>
 </div>
-<button (click)="handleHerbe()">Herbe</button>
-<button background-color="aqua">Potager</button>
