--- a/IHM/src/app/volets/volets.component.html
+++ b/IHM/src/app/volets/volets.component.html
@@ -1,1 +1,51 @@
-<p>volets works!</p>
+<div class="col">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col text-center">
+        <label class="location">RDC</label>
+        <div class="row justify-content">
+          <label class="lead">Cuisine</label>
+
+
+
+          <!--
+          <div class="btn-group" data-toggle="buttons">
+            <label class="btn btn-primary">
+              <input type="radio" name="options" id="cuisine-down"> Option 1
+            </label>
+            <label class="btn btn-primary">
+              <input type="radio" name="options" id="cuisine-off" checked=""> Option 2
+            </label>
+            <label class="btn btn-primary">
+              <input type="radio" name="options" id="cuisine-on"> Option 3
+            </label>
+          </div>
+-->
+
+        </div>
+      </div>
+      <div id="right" class="col text-center right">
+        <label class="location">Etage</label>
+        <div class="row justify-content">
+          <div id="sautDeLigne"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+
+<div class="col-sm-12">
+  <div class="form-group">
+    <label for="A1">
+        <input type="radio" name="Q1" id="A1" value="1" required checked/> TEST TEXT
+      </label>
+  </div>
+  <div class="form-group">
+    <label for="A2">
+        <input type="radio" name="Q1" id="A2" value="2" required/> TEXT TBD
+      </label>
+  </div>
+</div>
+</div>
