--- a/IHM/src/app/jardin/jardin.component.html
+++ b/IHM/src/app/jardin/jardin.component.html
@@ -15,8 +15,8 @@
                 <div class="row">
                     <div class=" col-sm">
                         <button type="button" class="btn btn-primary btn-lg btn-block"
-                            [style.background]="potagerStatus == 'on' ? '#4CAF50' : '#b22222'"
-                            (click)="handlePotager()">Herbe</button>
+                            [style.background]="herbeStatus == 'on' ? '#4CAF50' : '#b22222'"
+                            (click)="handleHerbe()">Herbe</button>
                     </div>
                     <div class="col-sm">
                         <button type="button" class="btn btn-primary btn-lg btn-block"
